<resources>
    <string name="app_name">RT21</string>
    <string name="login_page_title">Login page</string>
    <string name="register_page_title">Register page</string>
    <string name="name_login_register">Name</string>
    <string name="username_login_register">Username</string>
    <string name="email_login_register">Email</string>
    <string name="password_login_register">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="back_login_register_button">Back</string>
    <string name="add_location_button">add location</string>
    <string name="distance_traveled_format">Distance traveled with us:\n%s km</string>
    <string name="road_signs_passed_format">Maximal speed you reached:\n%s km/h</string>
    <string name="name_s_profile">Name: %s</string>
    <string name="age_s_profile">Age: %s</string>
    <string name="username_s_profile">Username: %s</string>
    <string name="email_s_profile">Email: %s</string>
    <string name="average_speed">Average speed:\n%s km/h</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
</resources>